# Cosmetics-Build

./: .gitignore  CMakeLists.txt  README.md  TODO.md  about.md  mod.json  support.md
.github/workflows/: multi-platform.yml
server/: Dockerfile  README.md  package-lock.json  package.json  protocol.md  wrangler.jsonc
server/schemas/: schema.sql
server/src/: index.ts  utils.ts  websocket.ts
server/src/database/: database.ts
server/src/handlers/: account.ts  cosmetics.ts  dashboard.ts  itemshop.ts  packets.ts
server/src/routes/: api.ts
server/src/types/: cosmetics.ts  response.ts  user.ts
server/src/webui/: dashboard.css  dashboard.html  index.css  index.html  websocket.js
server/src/webui/types/: cosmetic.js  packet.js
src/: defs.hpp  main.cpp
src/UI/: CosmeticLayer.cpp  CosmeticLayer.hpp  CosmeticSelectPopup.cpp  CosmeticSelectPopup.hpp  cosmeticLayer.cpp  cosmeticLayer.hpp
src/events/: Cosmetic.hpp  CosmeticLayerEvent.hpp  Event.hpp  EventDispatcher.cpp  EventDispatcher.hpp
src/hooks/: GJGarageLayer.cpp  GJGarageLayer.hpp  PlayLayer.cpp  PlayLayer.hpp  PlayerObject.cpp  PlayerObject.hpp
src/managers/: APIManager.cpp  APIManager.hpp  CosmeticManager.cpp  CosmeticManager.hpp
src/network/: NetworkManager.cpp  NetworkManager.hpp
src/network/packets/: Client.hpp  Packet.hpp  Server.hpp
src/network/packets/Client/: Account.hpp  Cosmetic.hpp
src/network/packets/Server/: Account.hpp  Cosmetic.hpp
src/types/: Account.hpp  Cosmetic.hpp  CosmeticPlayer.hpp  User.hpp
src/utils/: serialization.hpp
